--- a/iOS/invasion/Game/Battleground.storyboard
+++ b/iOS/invasion/Game/Battleground.storyboard
@@ -7,7 +7,7 @@
         <!--Battleground View Controller-->
         <scene sceneID="2et-VE-cDx">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="9bC-Vn-NNc" customClass="BattlegroundViewController" customModule="Wh_temp_caseinsensitive_rename" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="9bC-Vn-NNc" customClass="BattlegroundViewController" customModule="invasion" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1ph-8i-23f"/>
                         <viewControllerLayoutGuide type="bottom" id="2uq-D9-EsL"/>
@@ -17,47 +17,83 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LgX-6K-dvG">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f0h-Ps-Qb9">
-                                        <rect key="frame" x="0.0" y="0.0" width="40" height="568"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="548"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfX-pp-pbe">
+                                                <rect key="frame" x="10" y="508" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="Ik1-Ut-yEB"/>
+                                                    <constraint firstAttribute="height" constant="30" id="Jjv-SB-14O"/>
+                                                </constraints>
+                                                <state key="normal" image="card_panel_arrow"/>
+                                                <connections>
+                                                    <action selector="expandCardPanelClicked:" destination="9bC-Vn-NNc" eventType="touchUpInside" id="Dod-S4-RPX"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="FfX-pp-pbe" secondAttribute="bottom" constant="10" id="DB3-0W-H8R"/>
+                                            <constraint firstItem="FfX-pp-pbe" firstAttribute="leading" secondItem="f0h-Ps-Qb9" secondAttribute="leading" constant="10" id="UVp-9S-2di"/>
                                             <constraint firstAttribute="width" constant="40" id="XMN-5G-X1c"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZZH-Vm-c0c">
-                                        <rect key="frame" x="40" y="0.0" width="280" height="568"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ZZH-Vm-c0c">
+                                        <rect key="frame" x="40" y="0.0" width="280" height="548"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aME-8i-FYS" userLabel="Up View">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="284"/>
-                                                <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="264"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PJf-6n-NvZ" userLabel="Down View">
-                                                <rect key="frame" x="0.0" y="284" width="280" height="284"/>
-                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                <rect key="frame" x="0.0" y="284" width="280" height="264"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MMV-zr-1H1" userLabel="card panel container">
+                                <rect key="frame" x="0.0" y="448" width="320" height="120"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="8X0-g5-6Fq"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="2uq-D9-EsL" firstAttribute="top" secondItem="LgX-6K-dvG" secondAttribute="bottom" id="0lv-Kf-GFr"/>
+                            <constraint firstItem="MMV-zr-1H1" firstAttribute="leading" secondItem="bBs-hK-w2G" secondAttribute="leading" id="MQZ-vx-Bd7"/>
                             <constraint firstItem="LgX-6K-dvG" firstAttribute="leading" secondItem="bBs-hK-w2G" secondAttribute="leading" id="RXC-hc-UVc"/>
+                            <constraint firstAttribute="trailing" secondItem="MMV-zr-1H1" secondAttribute="trailing" id="SxE-FS-Dlv"/>
                             <constraint firstAttribute="trailing" secondItem="LgX-6K-dvG" secondAttribute="trailing" id="YSD-KV-N5r"/>
-                            <constraint firstItem="LgX-6K-dvG" firstAttribute="top" secondItem="bBs-hK-w2G" secondAttribute="top" id="evb-zb-ZJY"/>
+                            <constraint firstItem="LgX-6K-dvG" firstAttribute="top" secondItem="bBs-hK-w2G" secondAttribute="top" constant="20" id="evb-zb-ZJY"/>
+                            <constraint firstItem="2uq-D9-EsL" firstAttribute="top" secondItem="MMV-zr-1H1" secondAttribute="bottom" id="zKt-Vn-C7y"/>
                         </constraints>
                     </view>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
+                    <value key="contentSizeForViewInPopover" type="size" width="320" height="568"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="cardPanelViewContainer" destination="MMV-zr-1H1" id="V1T-la-FZa"/>
+                        <outlet property="controlPaneView" destination="f0h-Ps-Qb9" id="pET-7O-Gwz"/>
+                        <outlet property="expandCardPanelButton" destination="FfX-pp-pbe" id="Org-7d-Mra"/>
+                        <outlet property="oppnCapitalViewContainer" destination="aME-8i-FYS" id="fBP-1R-KsO"/>
+                        <outlet property="yourCapitalViewContainer" destination="PJf-6n-NvZ" id="Mu7-iI-tn4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="92f-kv-7VJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="352" y="364"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="card_panel_arrow" width="21" height="21"/>
+    </resources>
 </document>
