--- a/iOS/invasion/Game/Capital/CapitalDownsideView.xib
+++ b/iOS/invasion/Game/Capital/CapitalDownsideView.xib
@@ -4,7 +4,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CapitalDownsideView" customModule="Wh_temp_caseinsensitive_rename" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CapitalDownsideView" customModule="invasion">
+            <connections>
+                <outlet property="battlefieldView" destination="dg4-lN-Yct" id="IoY-ct-yF3"/>
+                <outlet property="discardView" destination="zRX-kk-Bi2" id="UlR-h2-D7l"/>
+                <outlet property="kingdomView" destination="T8M-eQ-ZOQ" id="nSu-qO-luD"/>
+                <outlet property="questView" destination="n75-GU-BNg" id="68I-do-QeY"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="280" height="284"/>
@@ -24,27 +31,28 @@
                             <rect key="frame" x="0.0" y="60" width="280" height="224"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8M-eQ-ZOQ" userLabel="KingdomView">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="224"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="224"/>
                                     <color key="backgroundColor" red="0.020496204647199256" green="0.73472985096617394" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="rfq-fZ-Z0X"/>
+                                        <constraint firstAttribute="width" constant="90" id="rfq-fZ-Z0X"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zRX-kk-Bi2" userLabel="DiscardView">
-                                    <rect key="frame" x="80" y="0.0" width="120" height="224"/>
+                                    <rect key="frame" x="90" y="0.0" width="100" height="224"/>
                                     <color key="backgroundColor" red="0.039068967850094616" green="1" blue="0.83094054512932081" alpha="1" colorSpace="calibratedRGB"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n75-GU-BNg" userLabel="QuestView">
-                                    <rect key="frame" x="200" y="0.0" width="80" height="224"/>
+                                    <rect key="frame" x="190" y="0.0" width="90" height="224"/>
                                     <color key="backgroundColor" red="0.013888471965201266" green="0.97298313070670972" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="3oa-5F-puj"/>
+                                        <constraint firstAttribute="width" constant="90" id="3oa-5F-puj"/>
                                     </constraints>
                                 </view>
                             </subviews>
                         </stackView>
                     </subviews>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="5LF-A2-v1U" secondAttribute="bottom" id="ZtG-bd-iQ5"/>
                         <constraint firstItem="dg4-lN-Yct" firstAttribute="top" secondItem="m9L-Es-fh7" secondAttribute="top" id="dxh-fI-rr6"/>
                     </constraints>
                     <variation key="default">
