--- a/iOS/invasion/Game/CardView/CardView.xib
+++ b/iOS/invasion/Game/CardView/CardView.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CardViewController" customModule="Wh_temp_caseinsensitive_rename" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CardViewController" customModule="invasion">
             <connections>
                 <outlet property="cardCost" destination="nIF-Vj-agQ" id="xL2-gc-9Lp"/>
                 <outlet property="cardDescription" destination="JCB-4a-kV9" id="C3T-do-hv0"/>
