--- a/iOS/invasion/Game/CardView/CardActionView.xib
+++ b/iOS/invasion/Game/CardView/CardActionView.xib
@@ -58,14 +58,36 @@
                         <constraint firstAttribute="height" constant="300" id="yal-2y-miW"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OkK-f6-Sw5">
+                    <rect key="frame" x="190" y="0.0" width="24" height="24"/>
+                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="24" id="BSK-kp-6bg"/>
+                        <constraint firstAttribute="height" constant="24" id="JMq-UR-Nsl"/>
+                    </constraints>
+                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" image="cross"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="12"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="closeButtonClicked:" destination="-1" eventType="touchUpInside" id="3xc-R7-5CG"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="xe7-vP-dRI" firstAttribute="top" secondItem="LOp-w1-Lg6" secondAttribute="bottom" id="1yz-OH-pXh"/>
+                <constraint firstAttribute="trailing" secondItem="OkK-f6-Sw5" secondAttribute="trailing" id="2x0-r1-64L"/>
                 <constraint firstItem="LOp-w1-Lg6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="4Sc-Rp-OR2"/>
                 <constraint firstItem="LOp-w1-Lg6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="6FD-ZD-68g"/>
                 <constraint firstAttribute="bottom" secondItem="xe7-vP-dRI" secondAttribute="bottom" id="6mx-U7-K4T"/>
+                <constraint firstAttribute="bottom" secondItem="OkK-f6-Sw5" secondAttribute="bottom" id="8bk-R8-x5T"/>
+                <constraint firstItem="OkK-f6-Sw5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="VlW-zO-7Tz"/>
                 <constraint firstItem="LOp-w1-Lg6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="aqT-df-4SE"/>
+                <constraint firstItem="xe7-vP-dRI" firstAttribute="top" secondItem="OkK-f6-Sw5" secondAttribute="bottom" id="f2r-G5-d4Y"/>
                 <constraint firstItem="xe7-vP-dRI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="kju-5j-iiD"/>
                 <constraint firstAttribute="trailing" secondItem="xe7-vP-dRI" secondAttribute="trailing" id="ufk-8K-32E"/>
             </constraints>
@@ -76,10 +98,15 @@
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="4Sc-Rp-OR2"/>
+                    <exclude reference="VlW-zO-7Tz"/>
                     <exclude reference="1yz-OH-pXh"/>
+                    <exclude reference="f2r-G5-d4Y"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="-35" y="254"/>
         </view>
     </objects>
+    <resources>
+        <image name="cross" width="37" height="37"/>
+    </resources>
 </document>
