--- a/iOS/invasion/Game/Capital/CapitalDownsideView.xib
+++ b/iOS/invasion/Game/Capital/CapitalDownsideView.xib
@@ -4,16 +4,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CapitalDownsideView" customModule="invasion">
-            <connections>
-                <outlet property="battlefieldView" destination="dg4-lN-Yct" id="IoY-ct-yF3"/>
-                <outlet property="discardView" destination="zRX-kk-Bi2" id="UlR-h2-D7l"/>
-                <outlet property="kingdomView" destination="T8M-eQ-ZOQ" id="nSu-qO-luD"/>
-                <outlet property="questView" destination="n75-GU-BNg" id="68I-do-QeY"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CapitalDownsideView" customModule="invasion">
             <rect key="frame" x="0.0" y="0.0" width="280" height="284"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -73,6 +66,12 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="battlefieldView" destination="dg4-lN-Yct" id="nn5-ug-INN"/>
+                <outlet property="discardView" destination="zRX-kk-Bi2" id="z9f-3W-1ji"/>
+                <outlet property="kingdomView" destination="T8M-eQ-ZOQ" id="YU8-Gv-yOb"/>
+                <outlet property="questView" destination="n75-GU-BNg" id="N9h-p1-pMS"/>
+            </connections>
             <point key="canvasLocation" x="289" y="231"/>
         </view>
     </objects>
