--- a/iOS/invasion/Game/Capital/CapitalField/QuestFieldView.xib
+++ b/iOS/invasion/Game/Capital/CapitalField/QuestFieldView.xib
@@ -4,17 +4,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QuestFieldView" customModule="invasion">
-            <connections>
-                <outlet property="cardLabel" destination="Yb8-gg-MeS" id="yOy-Le-vLE"/>
-                <outlet property="cardStackList" destination="l1C-w0-ORc" id="OOV-OT-XiB"/>
-                <outlet property="hpLabel" destination="Ibi-I6-lqg" id="V7I-v1-e2U"/>
-                <outlet property="powerLabel" destination="u7K-ez-imM" id="0SV-Rr-G7F"/>
-                <outlet property="questLabel" destination="3fn-q1-GmJ" id="zcL-c6-A9k"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="oZy-rV-b2N">
+        <view contentMode="scaleToFill" id="oZy-rV-b2N" customClass="QuestFieldView" customModule="invasion">
             <rect key="frame" x="0.0" y="0.0" width="90" height="154"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -134,6 +126,13 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="cardLabel" destination="Yb8-gg-MeS" id="xn1-3e-X4H"/>
+                <outlet property="cardStackList" destination="l1C-w0-ORc" id="mPh-yN-dcC"/>
+                <outlet property="hpLabel" destination="Ibi-I6-lqg" id="z4y-IK-ZWv"/>
+                <outlet property="powerLabel" destination="u7K-ez-imM" id="0Kw-CM-SUA"/>
+                <outlet property="questLabel" destination="3fn-q1-GmJ" id="rdI-iy-KSt"/>
+            </connections>
             <point key="canvasLocation" x="166" y="42"/>
         </view>
     </objects>
