--- a/iOS/invasion/Game/Capital/CapitalUpsideView.xib
+++ b/iOS/invasion/Game/Capital/CapitalUpsideView.xib
@@ -4,16 +4,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CapitalUpsideView" customModule="invasion">
-            <connections>
-                <outlet property="battlefieldView" destination="VuS-xl-OiW" id="ne0-2h-5dO"/>
-                <outlet property="discardView" destination="zhI-Vc-IuJ" id="jEV-gd-WMh"/>
-                <outlet property="kingdomView" destination="mHy-sN-ATe" id="089-9g-So1"/>
-                <outlet property="questView" destination="N0Q-UM-ADa" id="2F7-aD-v3l"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="GK7-IC-UIN">
+        <view contentMode="scaleToFill" id="GK7-IC-UIN" customClass="CapitalUpsideView" customModule="invasion">
             <rect key="frame" x="0.0" y="0.0" width="280" height="284"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -72,6 +65,12 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="battlefieldView" destination="VuS-xl-OiW" id="TIA-Tt-g88"/>
+                <outlet property="discardView" destination="zhI-Vc-IuJ" id="iwV-f5-e6k"/>
+                <outlet property="kingdomView" destination="mHy-sN-ATe" id="CFg-0T-oqS"/>
+                <outlet property="questView" destination="N0Q-UM-ADa" id="xqf-Uy-jfP"/>
+            </connections>
             <point key="canvasLocation" x="289" y="231"/>
         </view>
     </objects>
